Einige Strings in Konstanten ausgelagert